--- a/differentes-prises-en-charge.html
+++ b/differentes-prises-en-charge.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
 
@@ -25,7 +25,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/business-casual.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
   <!-- Font awesome icons  -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -53,11 +53,21 @@
               <span class="sr-only">(current)</span>
             </a>
           </li>
-          <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="consultation.html">La consultation</a>
+          <li class="nav-item dropdown px-lg-4">
+            <a class="nav-link dropdown-toggle text-uppercase text-expanded" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">La consultation</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="consultation.html#deroulement">Déroulement d'une séance</a>
+              <a class="dropdown-item" href="consultation.html#tarif">Tarif</a>
+            </div>
           </li>
-          <li class="nav-item active px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="differentes-prises-en-charge.html">Les différentes prises en charge</a>
+          <li class="nav-item dropdown px-lg-4">
+            <a class="nav-link dropdown-toggle text-uppercase text-expanded" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Les différentes prises en charge</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="differentes-prises-en-charge.html#nourrissons">Nourrissons</a>
+              <a class="dropdown-item" href="differentes-prises-en-charge.html#femmes-enceintes">Femmes enceintes</a>
+              <a class="dropdown-item" href="differentes-prises-en-charge.html#enfants-ados">Enfants / adolescents</a>
+              <a class="dropdown-item" href="differentes-prises-en-charge.html#adultes">Adultes</a>
+            </div>
           </li>
           <li class="nav-item px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="informations.html">Informations pratiques</a>
@@ -67,63 +77,179 @@
     </div>
   </nav>
 
-  <section class="page-section">
+  <section class="page-section" id="nourrissons">
     <div class="container">
       <div class="product-item">
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex ml-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Blended to Perfection</span>
-              <span class="section-heading-lower">Coffees &amp; Teas</span>
+              <span class="section-heading-lower">Nourrissons</span>
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/nourrisson.jpg" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">We take pride in our work, and it shows. Every time you order a beverage from us, we guarantee that it will be an experience worth having. Whether it's our world famous Venezuelan Cappuccino, a refreshing iced herbal tea, or something as simple as a cup of speciality sourced black coffee, you will be coming back for more.</p>
+            <h4>Quand amener son bébé chez l’ostéopathe ?</h4>
+            <p class="mb-0">
+              Dès la naissance ! L’idéal est de faire un bilan durant le premier mois de vie.<br>
+              En effet, si des perturbations sont présentes, une prise en charge le plus tôt
+              possible facilite grandement le travail de l'ostéopathe. Notamment durant le 1er
+              mois de vie, les os du crâne sont encore très malléables et les blocages appelés
+              dysfonctions ostéopathiques n’ont pas encore eu le temps de se fixer et peuvent
+              se résorber aisément.
+            </p>
+            <h4>Quels sont les symptômes qui amènent à consulter ?</h4>
+            <p class="mb-0">
+              <ul>
+                <li>Constipation</li>
+                <li>Coliques anormalement fréquentes, le bébé crie, pleure, serre les poings, devient rouge</li>
+                <li>Déformation de la tête (plate d'un côté, bosse au niveau du front...)</li>
+                <li>Troubles de l’allaitement </li>
+                <li>Difficultés de succion</li>
+                <li>Bébé qui reste toujours dans la même position, creuse le dos, se plie toujours du même côté,
+                  rotation de la tête toujours du même côté, difficulté à rester sur le ventre</li>
+                <li>Sommeil insuffisant, irritabilité, pleurs anormalement fréquents</li>
+                <li>Régurgitations fréquentes, digestion difficile et agitation après la tétée</li>
+                <li>Troubles ORL chroniques : otites, nez qui coule, canal lacrymal qui s’écoule mal</li>
+              </ul>
+            </p>
+            <h4>Quelles sont les choses à prévoir avant une consultation ostéopathique ?</h4>
+            <p class="mb-0">
+              <ul>
+                <li>Le carnet de santé</li>
+                <li>Tous résultats d'examens éventuels (radiographies, examen biologiques, ...)</li>
+                <li>Doudou, tétine, jeux, livres préférés</li>
+              </ul>
+              <em>Préférez le nourrir en amont si possible.</em>
+            </p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="page-section">
+  <section class="page-section" id="femmes-enceintes">
     <div class="container">
       <div class="product-item">
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex mr-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Delicious Treats, Good Eats</span>
-              <span class="section-heading-lower">Bakery &amp; Kitchen</span>
+              <span class="section-heading-lower">Femmes enceintes</span>
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-02.jpg" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/femmes-enceintes.jpg" alt="">
         <div class="product-item-description d-flex ml-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">Our seasonal menu features delicious snacks, baked goods, and even full meals perfect for breakfast or lunchtime. We source our ingredients from local, oragnic farms whenever possible, alongside premium vendors for specialty goods.</p>
+            <p class="mb-0">
+              Au cours de la grossesse, le corps de la femme subit de nombreuses transformations.
+              La colonne vertébrale se cambre, le sacrum change de position, les ligaments du bassin et
+              les muscles du périnée sont mis en tension, lles organes sont remontés et comprimés par
+              le bébé qui prend de plus en plus de place, etc. L’ensemble de ces modifications physiques
+              demande une bonne mobilité des structures osseuses, musculaires et ligamentaires du bassin
+              et du dos mais aussi du diaphragme et des organes digestifs et génitaux. La présence de
+              dysfonctions au sein de ce système lombo-pelvien peut entraîner des «blocages » ou des
+              douleurs qui perturbent la grossesse et peuvent compliquer l’accouchement.<br><br>
+              Au fur et à mesure de la grossesse, l’utérus monte de plus en plus dans la cavité abdominale,
+              ce qui va exercer une pression sur les organes de l’abdomen et du bassin. Cela peut être à
+              l’origine de douleurs intercostales, de remontées acides, d’essoufflement ou de tensions au
+              niveau du dos. L’augmentation du volume du ventre de la mère va également étirer et affaiblir
+              les muscles abdominaux, ce qui peut entraîner une cambrure au niveau du bas du dos provoquant
+              des douleurs, ainsi que des sciatalgies. Par ailleurs la prise de poids au cours de vos 9 mois
+              de grossesse peut avoir tendance à aplatir les voûtes plantaires, ce qui peut modifier votre
+              façon de marcher et entraîner alors des douleurs au niveau des genoux, des hanches et du bassin,
+              ainsi qu’une sensation de jambes lourdes.<br><br>
+              Pour pallier à ces petits désagréments liés à la grossesse, l’ostéopathie est parfaitement adaptée.
+              En effet c’est une thérapie uniquement manuelle qui ne nécessite aucune prise de médicaments.
+              De plus votre ostéopathe utilisera des techniques douces et appropriées pour vous et votre futur bébé.
+            </p>
+            <h4>Suivi de grossesse : quand venir consulter chez l'ostéopathe ?</h4>
+            <p class="mb-0">Il est conseillé de faire une séance dès le désir de grossesse, afin d’équilibrer
+              l’ensemble du corps avant la nidation.<br><br>
+              Pour les femmes enceintes de plus de trois mois, il est conseillé de consulter une fois par trimestre,
+              afin de surveiller les changements et adaptations constantes du corps qui peuvent générer des douleurs.<br><br>
+              De même, suite à l’accouchement il est préconisé de réaliser un bilan post-partum afin de s’assurer de
+              l’intégrité des structures lombo-pelviennes qui sont souvent perturbées par la grossesse et l’accouchement.
+              Ce bilan permet de préparer le bassin et le périnée aux séances de rééducation périnéale à venir
+              (dispensées par votre kinésithérapeute ou sage-femme). Ceci permettra souvent d’atteindre de meilleurs
+              résultats et plus rapidement.
+            </p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="page-section">
+  <section class="page-section" id="enfants-ados">
     <div class="container">
       <div class="product-item">
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex ml-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">From Around the World</span>
-              <span class="section-heading-lower">Bulk Speciality Blends</span>
+              <span class="section-heading-lower">Enfants / adolescents</span>
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-03.jpg" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/enfants-ados.jpg" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">Travelling the world for the very best quality coffee is something take pride in. When you visit us, you'll always find new blends from around the world, mainly from regions in Central and South America. We sell our blends in smaller to large bulk quantities. Please visit us in person for more details.</p>
+            <p class="mb-0">
+              De manière générale, il est conseillé de réaliser un bilan ostéopathique annuel afin de s’assurer
+              que le développement de votre enfant ainsi que sa croissance se passent au mieux.<br><br>
+              Néanmoins certaines étapes ou évènements de la vie de votre enfant peuvent nécessiter une
+              consultation, notamment :
+              <ul>
+                <li>A la suite d’une opération (appendicectomie, dents de sagesses, ...)</li>
+                <li>A la suite d’un traumatisme (choc, chute, ...)</li>
+                <li>Suite à des troubles digestifs (diarrhée, constipation, ballonnements, ...)</li>
+                <li>Suite à un pic de croissance</li>
+                <li>S'il porte des semelles orthopédiques (il est souhaitable de faire une séance
+                  avant la prise d'empreinte plantaire, puis une autre un mois après le début du port des semelles)</li>
+                <li>S'il porte un appareil dentaire (de même il est préférable de faire une séance avant la pose
+                  d'appareil puis de contrôler un mois après l'appareillage)</li>
+              </ul>
+              L’ostéopathie peut accompagner le travail du podologue, de l’orthodontiste, du kinésithérapeute,
+              de l'orthophoniste, du psychomotricien et du psychologue... afin que les différents axes de travail
+              se complètent dans l’intérêt de l’enfant ou de l’adolescent.<br><br>
+              <em>Attention : il est vivement recommandé deux jours de repos après une séance d'ostéopathie. 
+              Dans la mesure du possible prenez un rendez-vous en fonction des activités sportives et des
+              cours d'EPS de votre enfant.</em>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="page-section" id="adultes">
+    <div class="container">
+      <div class="product-item">
+        <div class="product-item-title d-flex">
+          <div class="bg-faded p-5 d-flex mr-auto rounded">
+            <h2 class="section-heading mb-0">
+              <span class="section-heading-lower">Adultes</span>
+            </h2>
+          </div>
+        </div>
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/adultes.jpg" alt="">
+        <div class="product-item-description d-flex ml-auto">
+          <div class="bg-faded p-5 rounded">
+            <p class="mb-0">
+              Il est conseillé d’effectuer un bilant ostépathique annuel.<br>
+              Par ailleurs, selon votre rythme de vie, travail, morphologie, activités physiques,
+              certaines étapes ou évènements peuvent nécessiter une consultation, notamment :
+              <ul>
+                <li>Suite à une opération (appendicectomie, dents de sagesses, hernie, etc.)</li>
+                <li>Suite à un traumatisme (choc, chute, entorses, etc.)</li>
+                <li>Si vous portez des semelles orthopédiques.</li>
+                <li>Si vous portez un appareil dentaire.</li>
+                <li>Après toute autre modification de l’équilibre corporel : nouvelles lunettes, autres travaux dentaires, etc.</li>
+              </ul>
+              Apporter les examens complémentaires (radiographies, IRM, scanners, examens biologiques, etc.)<br><br>
+              <em>Attention : il est vivement recommandé deux jours de repos après une séance d'ostéopathie. Veillez à prendre
+              rendez-vous en fonction de vos activités sportives.</em>
+            </p>
           </div>
         </div>
       </div>
