--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
 
@@ -25,7 +25,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/business-casual.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
   <!-- Font awesome icons  -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -53,11 +53,21 @@
               <span class="sr-only">(current)</span>
             </a>
           </li>
-          <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="consultation.html">La consultation</a>
+          <li class="nav-item dropdown px-lg-4">
+            <a class="nav-link dropdown-toggle text-uppercase text-expanded" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">La consultation</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="consultation.html#deroulement">Déroulement d'une séance</a>
+              <a class="dropdown-item" href="consultation.html#tarif">Tarif</a>
+            </div>
           </li>
-          <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="differentes-prises-en-charge.html">Les différentes prises en charge</a>
+          <li class="nav-item dropdown px-lg-4">
+            <a class="nav-link dropdown-toggle text-uppercase text-expanded" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Les différentes prises en charge</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="differentes-prises-en-charge.html#nourrissons">Nourrissons</a>
+              <a class="dropdown-item" href="differentes-prises-en-charge.html#femmes-enceintes">Femmes enceintes</a>
+              <a class="dropdown-item" href="differentes-prises-en-charge.html#enfants-ados">Enfants / adolescents</a>
+              <a class="dropdown-item" href="differentes-prises-en-charge.html#adultes">Adultes</a>
+            </div>
           </li>
           <li class="nav-item px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="informations.html">Informations pratiques</a>
@@ -74,7 +84,7 @@
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
             <span class="section-heading-lower">L'équipe</span>
-            <span class="section-heading-upper" id="name">Aude-Hélène Gay & Maxime Lesacq</span>
+            <span class="section-heading-upper" id="name">Aude-Hélène Gay <br>&amp;<br>Maxime Lesacq</span>
           </h2>
           <p class="mb-3">
             Diplomés de l'Institut Supérieur d'Ostéopathie de Lille.<br>
