--- a/informations.html
+++ b/informations.html
@@ -1,169 +1,172 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Cabinet d'osteopathie à Marnaz, dans la vallée de l'Arve.">
-    <meta name="author" content="Aude-Hélène Gay & Maxime Lesacq">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Cabinet d'osteopathie à Marnaz, dans la vallée de l'Arve.">
+  <meta name="author" content="Aude-Hélène Gay & Maxime Lesacq">
 
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Arve Osteo" />
-    <meta property="og:url" content="http://www.arve-osteo.com/" />
-    <meta property="og:image" content="http://www.arve-osteo.com/img/arve-osteo-gay-lesacq.jpeg" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Arve Osteo" />
+  <meta property="og:url" content="http://www.arve-osteo.com/" />
+  <meta property="og:image" content="http://www.arve-osteo.com/img/arve-osteo-gay-lesacq.jpeg" />
 
-    <link rel="icon" href="img/favicon.ico"/>
+  <link rel="icon" href="img/favicon.ico"/>
 
-    <title>Arve Osteo - Informations pratiques</title>
+  <title>Arve Osteo - Informations pratiques</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
+  <!-- Custom fonts for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/business-casual.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="css/style.css" rel="stylesheet">
 
-    <!-- Font awesome icons  -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <!-- Font awesome icons  -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <h1 class="site-heading text-center text-white d-none d-lg-block">
-      <span class="site-heading-upper text-primary mb-3">Cabinet d'ostéopathie</span>
-      <span class="site-heading-lower">Arve Osteo</span>
-    </h1>
+  <h1 class="site-heading text-center text-white d-none d-lg-block">
+    <span class="site-heading-upper text-primary mb-3">Cabinet d'ostéopathie</span>
+    <span class="site-heading-lower">Arve Osteo</span>
+  </h1>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Arve Osteo</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="index.html">Présentation
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="consultation.html">La consultation</a>
-            </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="differentes-prises-en-charge.html">Les différentes prises en charge</a>
-            </li>
-            <li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="informations.html">Informations pratiques</a>
-            </li>
-          </ul>
-        </div>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Arve Osteo</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="index.html">Présentation
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item dropdown px-lg-4">
+            <a class="nav-link dropdown-toggle text-uppercase text-expanded" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">La consultation</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="consultation.html#deroulement">Déroulement d'une séance</a>
+              <a class="dropdown-item" href="consultation.html#tarif">Tarif</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown px-lg-4">
+            <a class="nav-link dropdown-toggle text-uppercase text-expanded" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Les différentes prises en charge</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="differentes-prises-en-charge.html#nourrissons">Nourrissons</a>
+              <a class="dropdown-item" href="differentes-prises-en-charge.html#femmes-enceintes">Femmes enceintes</a>
+              <a class="dropdown-item" href="differentes-prises-en-charge.html#enfants-ados">Enfants / adolescents</a>
+              <a class="dropdown-item" href="differentes-prises-en-charge.html#adultes">Adultes</a>
+            </div>
+          </li>
+          <li class="nav-item active px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="informations.html">Informations pratiques</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <section class="page-section cta">
-      <div class="container">
-        <div class="row">
-          <div class="col-xl-9 mx-auto">
-            <div class="cta-inner text-center rounded">
-              <h2 class="section-heading mb-5">
-                <span class="section-heading-upper">Come On In</span>
-                <span class="section-heading-lower">We're Open</span>
-              </h2>
-              <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Sunday
-                  <span class="ml-auto">Closed</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Monday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Tuesday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Wednesday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Thursday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Friday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Saturday
-                  <span class="ml-auto">9:00 AM to 5:00 PM</span>
-                </li>
-              </ul>
-              <p class="address mb-5">
-                <em>
-                  <strong>1116 Orchard Street</strong>
-                  <br>
-                  Golden Valley, Minnesota
-                </em>
-              </p>
-              <p class="mb-0">
-                <small>
-                  <em>Call Anytime</em>
-                </small>
+  <section class="page-section cta">
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-9 mx-auto">
+          <div class="cta-inner text-center rounded">
+            <h2 class="section-heading mb-5">
+              <span class="section-heading-lower">Horaires</span>
+            </h2>
+            <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
+              <li class="list-unstyled-item list-hours-item d-flex">
+                Lundi
+                <span class="ml-auto">8h00 - 20h00</span>
+              </li>
+              <li class="list-unstyled-item list-hours-item d-flex">
+                Mardi
+                <span class="ml-auto">8h00 - 20h00</span>
+              </li>
+              <li class="list-unstyled-item list-hours-item d-flex">
+                Mercredi
+                <span class="ml-auto">8h00 - 20h00</span>
+              </li>
+              <li class="list-unstyled-item list-hours-item d-flex">
+                Jeudi
+                <span class="ml-auto">8h00 - 20h00</span>
+              </li>
+              <li class="list-unstyled-item list-hours-item d-flex">
+                Vendredi
+                <span class="ml-auto">8h00 - 20h00</span>
+              </li>
+              <li class="list-unstyled-item list-hours-item d-flex">
+                Samedi
+                <span class="ml-auto">8h00 - 18h00</span>
+              </li>
+              <li class="list-unstyled-item list-hours-item d-flex">
+                Dimanche
+                <span class="ml-auto">Fermé</span>
+              </li>
+            </ul>
+            <p class="address mb-5">
+              <em>
+                <strong>162 Rue de la Fin</strong>
                 <br>
-                (317) 585-8468
+                74460, Marnaz
+              </em>
+            </p>
+            <h2 class="section-heading mb-4">
+              <div id="phone">
+                <span class="section-heading-lower"><i class="fa fa-phone"></i> <a href="tel:0450539753">04.50.53.97.53</a></span>
+              </div>
+            </h2>
+            <br><br><br>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="page-section about-heading">
+    <div class="container">
+      <div class="about-heading-content">
+        <div class="row">
+          <div class="col-xl-9 col-lg-10 mx-auto">
+            <div class="bg-faded rounded p-5" id="tarif">
+              <h2 class="section-heading mb-4">
+                <span class="section-heading-upper">Numéros ADELI</span>
+              </h2>
+              <p id="adeli" class="mb-0">
+                Aude-Hélène Gay : 74 00 0782 8 <br>
+                Maxime Lesacq : 74 00 0783 6 <br>
               </p>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="page-section about-heading">
-      <div class="container">
-        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/about.jpg" alt="">
-        <div class="about-heading-content">
-          <div class="row">
-            <div class="col-xl-9 col-lg-10 mx-auto">
-              <div class="bg-faded rounded p-5">
-                <h2 class="section-heading mb-4">
-                  <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                  <span class="section-heading-lower">About Our Cafe</span>
-                </h2>
-                <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
-                <p class="mb-0">We guarantee that you will fall in
-                  <em>lust</em>
-                  with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+  <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2768.4167395443324!2d6.523079715577588!3d46.0627309791126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c06329827d7c3%3A0xe261f5b3b470d700!2s162%20Rue%20de%20la%20Fin%2C%2074460%20Marnaz!5e0!3m2!1sfr!2sfr!4v1571675538940!5m2!1sfr!2sfr" frameborder="0" allowfullscreen=""></iframe>
 
-    <footer class="footer text-center py-5">
-      <div class="container">
-        <p class="m-0 small">Site développé avec <i class="fa fa-heart"></i> à partir d'un template de <a href="https://startbootstrap.com/">startbootstrap.com</a></p>
-        <p class="m-0 small">Copyright &copy; Arve Osteo 2019</p>
-      </div>
-    </footer>
+  <footer class="footer text-center py-5">
+    <div class="container">
+      <p class="m-0 small">Site développé avec <i class="fa fa-heart"></i> à partir d'un template de <a href="https://startbootstrap.com/">startbootstrap.com</a></p>
+      <p class="m-0 small">Copyright &copy; Arve Osteo 2019</p>
+    </div>
+  </footer>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  </body>
-
-  <!-- Script to highlight the active date in the hours list -->
-  <script>
-    $('.list-hours li').eq(new Date().getDay()).addClass('today');
-  </script>
+</body>
 
 </html>
